SG_default.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  A cloudformation template for creating my personal security groups
  used within the default VPC
Parameters:
  TurrmurraSSH:
    Description: The IP address range to access through the SG via ssh
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
  EppingSSH:
    Description: The IP address range to access through the SG via ssh
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
  RemoteSSH:
    Description: The IP address range to access through the SG via ssh
    Type: String
    MaxLength: '18'
    AllowedPattern: '((\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})){0,1}'
Conditions:
  RemoteLocation: !Not [!Equals ['', !Ref RemoteSSH]]
Resources:
  DefaultSSHSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security group for controlling access to FLEX_EC2 instances
      SecurityGroupIngress:
        !If
          - RemoteLocation
          - - IpProtocol: tcp
              FromPort: '22'
              ToPort: '22'
              CidrIp: !Ref TurrmurraSSH
            - IpProtocol: tcp
              FromPort: '22'
              ToPort: '22'
              CidrIp: !Ref EppingSSH
            - IpProtocol: tcp
              FromPort: '22'
              ToPort: '22'
              CidrIp: !Ref RemoteSSH
          - - IpProtocol: tcp
              FromPort: '22'
              ToPort: '22'
              CidrIp: !Ref TurrmurraSSH
            - IpProtocol: tcp
              FromPort: '22'
              ToPort: '22'
              CidrIp: !Ref EppingSSH
  DefaultWebServerSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SG to attach to a webserver
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
Outputs:
  DefaultSSHSG:
    Description: The default ssh security group id for EC2 import reference
    Value: !GetAtt DefaultSSHSG.GroupId
  DefaultWebServerSG:
    Description: The default webserver security group id for EC2 import reference
    Value: !GetAtt DefaultWebServerSG.GroupId
