VPC_bastion.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Cloudformation template for building a functional custom VPC with public and private
  subnet as well as bastion host and private instance
Parameters:
  VPCIPCidr:
    Type: String
    AllowedPattern: '^[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}/[0-9]{2}'
    Description: A valid ipcidr block for vpc
    Default: '10.1.0.0/16'
  NamePrefix:
    Type: String
    Description: Name prefix for sub resources
    Default: 'playground'
  SubnetCidr:
    Type: CommaDelimitedList
    Description: A list of ipcidr block for subnet, expecting 6
    Default: '10.1.1.0/24, 10.1.2.0/24, 10.1.3.0/24, 10.1.4.0/24, 10.1.5.0/24, 10.1.6.0/24'
  TurrmurraSSH:
    Description: The IP address range to access through the SG via ssh
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
  EppingSSH:
    Description: The IP address range to access through the SG via ssh
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
Resources:
  CustomVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VPCIPCidr
      EnableDnsHostnames: 'true'
      EnableDnsSupport: 'true'
      Tags:
        - Key: Name
          Value: !Ref NamePrefix
  PublicSubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select
        - 0
        - !Ref SubnetCidr
      VpcId: !Ref CustomVPC
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-PublicA'
  PublicSubnetB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select
        - 1
        - !Ref SubnetCidr
      VpcId: !Ref CustomVPC
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-PublicB'
  PublicSubnetC:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select
        - 2
        - !Ref SubnetCidr
      VpcId: !Ref CustomVPC
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-PublicC'
  PrivateSubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select
        - 3
        - !Ref SubnetCidr
      VpcId: !Ref CustomVPC
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-PrivateA'
  PrivateSubnetB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select
        - 4
        - !Ref SubnetCidr
      VpcId: !Ref CustomVPC
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-PrivateB'
  PrivateSubnetC:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select
        - 5
        - !Ref SubnetCidr
      VpcId: !Ref CustomVPC
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-PrivateC'
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub 'igw-${NamePrefix}'
  GatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref CustomVPC
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref CustomVPC
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-Public'
  PrivateRouteTableA:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref CustomVPC
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-PrivateA'
  PrivateRouteTableB:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref CustomVPC
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-PrivateB'
  PrivateRouteTableC:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref CustomVPC
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-PrivateC'
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: GatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicASubnetAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetA
  PublicBSubnetAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetB
  PublicCSubnetAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetC
  PublicAElasticIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: 'vpc'
  PublicBElasticIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: 'vpc'
  PublicCElasticIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: 'vpc'
  SubnetANAT:
    Type: 'AWS::EC2::NatGateway'
    DependsOn: PublicAElasticIP
    Properties: 
      AllocationId: !GetAtt PublicAElasticIP.AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags:
        - Key: Name
          Value: !Sub 'nat-A-${NamePrefix}'
  SubnetBNAT:
    Type: 'AWS::EC2::NatGateway'
    DependsOn: PublicBElasticIP
    Properties: 
      AllocationId: !GetAtt PublicBElasticIP.AllocationId
      SubnetId: !Ref PublicSubnetB
      Tags:
        - Key: Name
          Value: !Sub 'nat-B-${NamePrefix}'
  SubnetCNAT:
    Type: 'AWS::EC2::NatGateway'
    DependsOn: PublicCElasticIP
    Properties: 
      AllocationId: !GetAtt PublicCElasticIP.AllocationId
      SubnetId: !Ref PublicSubnetC
      Tags:
        - Key: Name
          Value: !Sub 'nat-C-${NamePrefix}'
  PrivateARoute:
    Type: 'AWS::EC2::Route'
    DependsOn: SubnetANAT
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref SubnetANAT
      RouteTableId: !Ref PrivateRouteTableA
  PrivateBRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: SubnetBNAT
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref SubnetBNAT
      RouteTableId: !Ref PrivateRouteTableB
  PrivateCRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: SubnetCNAT
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref SubnetCNAT
      RouteTableId: !Ref PrivateRouteTableC
  PrivateASubnetAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTableA
      SubnetId: !Ref PrivateSubnetA
  PrivateBSubnetAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTableB
      SubnetId: !Ref PrivateSubnetB
  PrivateCSubnetAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTableC
      SubnetId: !Ref PrivateSubnetC
  DefaultSecurityGroup:
    Type: 'AWS::CloudFormation::Stack'
    Properties:
      TemplateURL: 'https://kazhala-cloudformation-storage.s3-ap-southeast-2.amazonaws.com/SG_default.yaml'
      TimeoutInMinutes: '5'
      Parameters:
        VpcId: !Ref CustomVPC
        TurrmurraSSH: !Ref TurrmurraSSH
        EppingSSH: !Ref EppingSSH
        RemoteSSH: ''
        NamePrefix: !Ref NamePrefix
  DefaultInstance:
    Type: 'AWS::CloudFormation::Stack'
    Properties:
      TemplateURL: 'https://kazhala-cloudformation-storage.s3-ap-southeast-2.amazonaws.com/EC2_amz2.yaml'
      TimeoutInMinutes: '10'
      Parameters:
        SubnetId: !Ref PublicSubnetB
        SecurityGroups: !GetAtt [DefaultSecurityGroup, Outputs.DefaultSSHSG]
        KeyName: ap-southeast-2_playground
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-bastion'
  PrivateSG:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn: DefaultSecurityGroup
    Properties:
      GroupDescription: 'Private security group for connecting private instance to bastion host'
      GroupName: !Sub '${NamePrefix}-private'
      SecurityGroupIngress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          SourceSecurityGroupId: !GetAtt [DefaultSecurityGroup, Outputs.DefaultSSHSG]
      VpcId: !Ref CustomVPC
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-private'
  PrivateInstance:
    Type: 'AWS::CloudFormation::Stack'
    DependsOn: PrivateARoute
    Properties:
      TemplateURL: 'https://kazhala-cloudformation-storage.s3-ap-southeast-2.amazonaws.com/EC2_amz2.yaml'
      TimeoutInMinutes: '10'
      Parameters:
        SubnetId: !Ref PrivateSubnetA
        SecurityGroups: !Ref PrivateSG
        KeyName: ap-southeast-2_playground
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-private'
  FlowLogRole:
    Type: 'AWS::IAM::Role'
    Properties:
      Description: !Sub '${AWS::StackName} flow log role'
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - vpc-flow-logs.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Policies:
        - PolicyName: flow-log-inline
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Resource: "*"
                Action:
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:DescribeLogGroups"
                  - "logs:DescribeLogStreams"
                  - "logs:PutLogEvents"
      Tags:
        - Key: Name
          Value: !Sub '${NamePrefix}-vpc-flow-log'
  VPCFlowLog:
    Type: 'AWS::EC2::FlowLog'
    DependsOn:
      - CustomVPC
      - FlowLogRole
    Properties:
      DeliverLogsPermissionArn: !GetAtt FlowLogRole.Arn
      LogDestinationType: 'cloud-watch-logs'
      LogGroupName: '/kazhala/vpc/flowlogs'
      ResourceId: !Ref CustomVPC
      ResourceType: 'VPC'
      TrafficType: 'ALL'
